--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.6.1",
     "ng2-table": "^1.3.2",
+    "ngx-bootstrap": "^1.6.5",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.0.0-beta.12",
     "systemjs": "^0.19.27",
